Fix/ replaced image and unblurred the low image

--- a/components/organisms/HomePage/ExperiencesSection/ExperiencesSection.module.scss
+++ b/components/organisms/HomePage/ExperiencesSection/ExperiencesSection.module.scss
@@ -36,7 +36,7 @@
     height: 100%;
     opacity: 0.7;
     object-fit: cover;
-    filter: blur(2px);
+    // filter: blur(2px);
   }
 }
 
