--- a/components/organisms/HomePage/ServicesSection/ServicesSection.module.scss
+++ b/components/organisms/HomePage/ServicesSection/ServicesSection.module.scss
@@ -45,6 +45,9 @@
   align-items: center;
   justify-content: center;
 
+  // Drop shadow for better feeling
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+
   h3 {
     margin-top: 0;
     color: var(--accent-color);
